if applied, this commit corrects gap problems with skills gap, and modified styles and hover effects for the progress bars

--- a/scss/Layouts/_sections.scss
+++ b/scss/Layouts/_sections.scss
@@ -71,4 +71,14 @@
 			}
 		}
 	}
+
+	.progress {
+		height: 2rem !important;
+		transition: all $def-transition-duration ease-in-out;
+		border: $progress_border_sz solid transparent;
+
+		&:hover {
+			border: $progress_border_sz solid $brand-color-primary;
+		}
+	}
 }
